# simple-html

./: CHANGELOG.md  simple-html.cabal
app/: Main.hs
src/: Lib.hs
